--- a/index.html
+++ b/index.html
@@ -3,32 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome to My Static Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Fundraising Campaign</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to right, #ff7e5f, #feb47b);
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #555;
+        }
+        .donate-btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background: #ff5733;
+            color: white;
+            text-decoration: none;
+            font-size: 20px;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        .donate-btn:hover {
+            background: #c70039;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Very !</h1>trust worthy website</h1>
-        <p> To jump down to our list of trusted organizations, click here. 
-
-The ongoing genocide in Gaza has caused catastrophic levels of suffering for human life, critical infrastructure, and the environment. While this time is marked by immense pain, it has also galvanized a global community to take action in support of Palestinians. 
-
-At BuildPalestine, we are committed to being a steward of global solidarity for Palestine in ways that affirm Palestinian self-determination, agency, and liberation. We believe that genuine impact in Palestine – whether it’s emergency humanitarian aid or investments in education and the economy – is best achieved through direct action, cooperation, mutual understanding, and solidarity, outside of unjust systems of power. 
-
-We run an interactive membership platform called Under the Olive Tree which is a hub for supporters of Palestine to share and plug into initiatives that uplift and advance Palestinian progress. Join us here.
-
-We also acknowledge the danger of depoliticizing aid for Palestinians and encourage people to follow organizations advocating for Palestine and countering harmful propaganda and misinformation in the mainstream media. Our recent blog post lists these groups: “Organizations Working to Dismantle the Occupation and Shift the Narrative“
-
-Our intention with this list is to encourage supporters of Palestine to think differently about how we support aid and development in Palestine by prioritizing mutual aid, social innovators, and local organizations. That being said, there are also international organizations whose work is driven by the voices and perspectives of local communities, and we have included some of them here. We hope that this list offers a diversity of opportunities to materially support Palestine in a time of immense need, while shaping a long-term perspective on how to make a genuine and lasting impact in Palestine. 
-
- </p>
-    </header>
-    <a href="YOUR_WISE_PAYMENT_LINK" target="_blank">
-    <button style="background-color: #00bfae; color: white; padding: 10px 20px; font-size: 16px; border: none; border-radius: 5px;">
-        Donate via Wise
-    </button>
-</a>
-
+    <div class="container">
+        <h1>Support Our Cause</h1>
+        <p>Your contribution can make a difference in someone's life. Join us in our mission to create a better world.</p>
+        <a href="#" class="donate-btn">Donate Now</a>
+    </div>
 </body>
 </html>
