--- a/index.html
+++ b/index.html
@@ -39,10 +39,17 @@
         .donate-btn:hover {
             background: #c70039;
         }
+        .campaign-image {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <img src="hh5axnD5uwxhGDBi.jpg" alt="Fundraising Campaign Image" class="campaign-image">
         <h1>Support Our Cause</h1>
         <p>Your contribution can make a difference in someone's life. Join us in our mission to create a better world.</p>
         <a href="#" class="donate-btn">Donate Now</a>
