--- a/index.html
+++ b/index.html
@@ -3,56 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundraising Campaign</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Simple Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #ff7e5f, #feb47b);
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 15px;
             text-align: center;
         }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        nav {
+            background-color: #444;
+            overflow: hidden;
         }
-        h1 {
-            color: #333;
-        }
-        p {
-            color: #555;
-        }
-        .donate-btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background: #ff5733;
+        nav a {
             color: white;
+            padding: 14px 20px;
             text-decoration: none;
-            font-size: 20px;
-            border-radius: 5px;
-            transition: 0.3s;
+            display: inline-block;
         }
-        .donate-btn:hover {
-            background: #c70039;
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
         }
-        .campaign-image {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            margin-bottom: 20px;
+        .container {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
+
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
     <div class="container">
-        <img src="hh5axnD5uwxhGDBi.jpg" alt="Fundraising Campaign Image" class="campaign-image">
-        <h1>Support Our Cause</h1>
-        <p>Your contribution can make a difference in someone's life. Join us in our mission to create a better world.</p>
-        <a href="#" class="donate-btn">Donate Now</a>
+        <h2>About Us</h2>
+        <p>This is a simple webpage created using HTML and CSS. You can add more content and style as needed.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet bibendum lorem. Integer id massa ac urna vehicula venenatis.</p>
     </div>
+
+    <footer>
+        <p>&copy; 2025 My Website. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
