--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support Palestine </title>
+    <title>Fundraising Campaign</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,7 +27,7 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             overflow-y: auto;
-            max-height: 400px;
+            min-height: 300vh; /* Makes the content three pages long */
         }
         .donate-btn {
             display: inline-block;
@@ -53,6 +53,8 @@
         <p>We are raising funds to help those in need. Every contribution, big or small, makes a difference.</p>
         <p>Your donations go directly towards providing essential resources, support, and care for our community.</p>
         <p>Join us in making a positive impact today!</p>
+        <p style="margin-top: 100vh;">Your support is invaluable in bringing change.</p>
+        <p style="margin-top: 100vh;">Thank you for being part of this journey.</p>
     </div>
     <a href="#" class="donate-btn">Donate Now</a>
 </body>
